--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,16 +1,16 @@
-.g1 {
+.g1 .card-content {
   background-color: red;
 }
 
-.g2 {
+.g2 .card-content {
   background-color: green;
 }
 
-.g3 {
+.g3 .card-content {
   background-color: purple;
 }
 
-.g4 {
+.g4 .card-content {
   background-color: grey;
 }
 
@@ -18,6 +18,7 @@
   /* Screen size: mobile (<500) */
   flex: 0 1 100%;
   margin: 0.5em;
+  margin-bottom: 2em;
 }
 
 .card a {
@@ -26,7 +27,8 @@
 }
 
 .card-content {
-  margin: 1em;
+  padding: 1em;
+  min-height: 6em;
 }
 
 .card-content h2 {
