--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -2,7 +2,8 @@
   grid-area: nav;
   display: flex;
   margin-bottom: 4em;
-  padding: 2em;
+  padding: 0.5em;
+  background-color: blue;
 }
 
 .nav a {
@@ -11,6 +12,6 @@
 }
 
 .nav-content {
-  flex: 0 1 20%
-  background-color: azure;
+  flex: 0 25%;
+  background-color: red;
 }
