--- a/src/css/author.css
+++ b/src/css/author.css
@@ -1,15 +1,22 @@
 .author-picture {
-  /* width: 300px; */
+   max-width: 100px; 
   /* height: 300px; */
   /* margin: 20px; */
   shape-outside: circle();
   clip-path: circle();
   background: lightblue;
-  /* margin: 0 auto; */
+  margin: 0 auto; 
 }
 
-.author-info {
+.author-info-container {
   width: 100%;
+  height: 200px;
+  background-color: lightblue;
+}
+
+.author-info-content {
+  margin: 30px auto;
+  width: 80%;
   height: 100px;
-  background-color: yellow;
+  
 }
