--- a/src/css/card.css
+++ b/src/css/card.css
@@ -24,6 +24,11 @@
 .card a {
 	color: black;
   text-decoration: none;
+  text-outline: white;
+}
+
+.card a:hover {
+  text-decoration: underline;
 }
 
 .card-content {
@@ -39,7 +44,7 @@ img {
 	display: block;
 	border: 0;
 	width: 100%;
-	/* height: 60px; */
+	/*height: 300px; */
 }
 
 /* If Screen Is Wide Enough */
