--- a/src/css/style.css
+++ b/src/css/style.css
@@ -31,6 +31,23 @@
   margin: 0.5em;
 }
 
+.header h1 {
+  color: white;
+	font-size: 40px;
+	text-shadow: -1px 1px 0 #000,
+				  1px 1px 0 #000,
+				 1px -1px 0 #000;
+				-1px -1px 0 #000;
+}
+
+.header .black {
+  color: black;
+  text-shadow: -1px 1px 0 white,
+				  1px 1px 0 white,
+				 1px -1px 0 white;
+				-1px -1px 0 white;
+}
+
 .footer {
   grid-area: ft;
   margin: 0.5em;
