--- a/src/css/card.css
+++ b/src/css/card.css
@@ -1,17 +1,25 @@
-.g1 .card-content {
-  background-color: red;
+.card-container {
+  grid-area: main;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 0 1em;
 }
 
-.g2 .card-content {
-  background-color: green;
+.chocopie .card-content {
+  background-color: rgb(185, 84, 84);
 }
 
-.g3 .card-content {
-  background-color: purple;
+.chocoheim .card-content {
+  background-color: lightgreen;
 }
 
-.g4 .card-content {
-  background-color: grey;
+.mygummy .card-content {
+  background-color: rgb(184, 22, 199);
+}
+
+.bananamilk .card-content {
+  background-color: rgb(212, 203, 65);
 }
 
 .card {
@@ -19,12 +27,12 @@
   flex: 0 1 100%;
   margin: 0.5em;
   margin-bottom: 2em;
+  border: 1px solid black;
 }
 
 .card a {
 	color: black;
   text-decoration: none;
-  text-outline: white;
 }
 
 .card a:hover {
@@ -33,35 +41,35 @@
 
 .card-content {
   padding: 1em;
-  min-height: 6em;
+  min-height: 160px;
 }
 
 .card-content h2 {
   margin: 0;
 }
 
-img {
+.card img {
 	display: block;
 	border: 0;
 	width: 100%;
-	/*height: 300px; */
+	height: 300px;
 }
 
 /* If Screen Is Wide Enough */
 @media(min-width: 475px) {
   .card {
-    flex: 0 1 calc(50% - 1em);
+    flex: 0 1 calc(49% - 1em);
   }
 }
 
 @media(min-width: 768px) {
   .card {
-    flex: 0 1 calc(33% - 1em);
+    flex: 0 1 calc(32% - 1em);
   }
 }
 
 @media(min-width: 1000px) {
   .card {
-    flex: 0 1 calc(25% - 1em);
+    flex: 0 1 calc(24% - 1em);
   }
 }
